--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,11 +16,18 @@ dependencies:
   shared_preferences: ^2.5.3
   flame_audio: ^2.11.11   
 
-
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^5.0.0
+  flutter_launcher_icons: ^0.13.1   # ← დამატებულია ლოგოს გენერაციისთვის
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/logo/logo.png"   
+  adaptive_icon_background: "#ffffff"     
+  adaptive_icon_foreground: "assets/logo/logo.png"
 
 flutter:
   uses-material-design: true
